[package]
name = "learning_wgpu"
version = "0.1.0"
authors = ["Yohe-Am <56622350+Yohe-Am@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
env_logger = "0.7"
log = "0.4"
winit = "0.22"
futures = "0.3"

cgmath = "0.17"
wgpu = "0.7"
# shaderc = "0.7"

# [dependencies.wgpu]
# version = "0.7"
# features = ["vulkan-portability"]

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.1"
glob = "0.3"
shaderc = "0.7"